--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@ __pycache__
 *.pyc
 
 data/
+
+# cpp files
+bin/
+lib/
+
+# cmake files
+CMakeCache.txt
+cmake_install.cmake
+cmake_uninstall.cmake
+CMakeFiles/
