add c++ multiple files and multiple dirs examples

--- a/cpp/multi_files/CMakeLists.txt
+++ b/cpp/multi_files/CMakeLists.txt
@@ -1,16 +1,14 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(HelloWorld)
+project(MathFunctions)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(HelloWorld hello_world.cpp)
+aux_source_directory(. SRC_LIST)
+
+add_executable(MathFunctions ${SRC_LIST})
 
 # 设置可执行文件的输出目录
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
-
-# 设置库文件的输出目录
-
-set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
 
