--- a/cpp/multi_files/Makefile
+++ b/cpp/multi_files/Makefile
@@ -57,10 +57,10 @@ RM = /scratch/jiarui14/miniconda3/envs/vllm/lib/python3.10/site-packages/cmake/d
 EQUALS = =
 
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /shared/storage-01/jiarui14/dev/mlsys/cpp/hello_world
+CMAKE_SOURCE_DIR = /shared/storage-01/jiarui14/dev/mlsys/cpp/mutli_files
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /shared/storage-01/jiarui14/dev/mlsys/cpp/hello_world
+CMAKE_BINARY_DIR = /shared/storage-01/jiarui14/dev/mlsys/cpp/mutli_files
 
 #=============================================================================
 # Targets provided globally by CMake.
@@ -87,9 +87,9 @@ rebuild_cache/fast: rebuild_cache
 
 # The main all target
 all: cmake_check_build_system
-	$(CMAKE_COMMAND) -E cmake_progress_start /shared/storage-01/jiarui14/dev/mlsys/cpp/hello_world/CMakeFiles /shared/storage-01/jiarui14/dev/mlsys/cpp/hello_world//CMakeFiles/progress.marks
+	$(CMAKE_COMMAND) -E cmake_progress_start /shared/storage-01/jiarui14/dev/mlsys/cpp/mutli_files/CMakeFiles /shared/storage-01/jiarui14/dev/mlsys/cpp/mutli_files//CMakeFiles/progress.marks
 	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 all
-	$(CMAKE_COMMAND) -E cmake_progress_start /shared/storage-01/jiarui14/dev/mlsys/cpp/hello_world/CMakeFiles 0
+	$(CMAKE_COMMAND) -E cmake_progress_start /shared/storage-01/jiarui14/dev/mlsys/cpp/mutli_files/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
@@ -117,41 +117,65 @@ depend:
 .PHONY : depend
 
 #=============================================================================
-# Target rules for targets named HelloWorld
+# Target rules for targets named MathFunctions
 
 # Build rule for target.
-HelloWorld: cmake_check_build_system
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 HelloWorld
-.PHONY : HelloWorld
+MathFunctions: cmake_check_build_system
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 MathFunctions
+.PHONY : MathFunctions
 
 # fast build rule for target.
-HelloWorld/fast:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/HelloWorld.dir/build.make CMakeFiles/HelloWorld.dir/build
-.PHONY : HelloWorld/fast
+MathFunctions/fast:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/MathFunctions.dir/build.make CMakeFiles/MathFunctions.dir/build
+.PHONY : MathFunctions/fast
 
-hello_world.o: hello_world.cpp.o
-.PHONY : hello_world.o
+MathFunctions.o: MathFunctions.cc.o
+.PHONY : MathFunctions.o
 
 # target to build an object file
-hello_world.cpp.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/HelloWorld.dir/build.make CMakeFiles/HelloWorld.dir/hello_world.cpp.o
-.PHONY : hello_world.cpp.o
+MathFunctions.cc.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/MathFunctions.dir/build.make CMakeFiles/MathFunctions.dir/MathFunctions.cc.o
+.PHONY : MathFunctions.cc.o
 
-hello_world.i: hello_world.cpp.i
-.PHONY : hello_world.i
+MathFunctions.i: MathFunctions.cc.i
+.PHONY : MathFunctions.i
 
 # target to preprocess a source file
-hello_world.cpp.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/HelloWorld.dir/build.make CMakeFiles/HelloWorld.dir/hello_world.cpp.i
-.PHONY : hello_world.cpp.i
+MathFunctions.cc.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/MathFunctions.dir/build.make CMakeFiles/MathFunctions.dir/MathFunctions.cc.i
+.PHONY : MathFunctions.cc.i
 
-hello_world.s: hello_world.cpp.s
-.PHONY : hello_world.s
+MathFunctions.s: MathFunctions.cc.s
+.PHONY : MathFunctions.s
 
 # target to generate assembly for a file
-hello_world.cpp.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/HelloWorld.dir/build.make CMakeFiles/HelloWorld.dir/hello_world.cpp.s
-.PHONY : hello_world.cpp.s
+MathFunctions.cc.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/MathFunctions.dir/build.make CMakeFiles/MathFunctions.dir/MathFunctions.cc.s
+.PHONY : MathFunctions.cc.s
+
+main.o: main.cc.o
+.PHONY : main.o
+
+# target to build an object file
+main.cc.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/MathFunctions.dir/build.make CMakeFiles/MathFunctions.dir/main.cc.o
+.PHONY : main.cc.o
+
+main.i: main.cc.i
+.PHONY : main.i
+
+# target to preprocess a source file
+main.cc.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/MathFunctions.dir/build.make CMakeFiles/MathFunctions.dir/main.cc.i
+.PHONY : main.cc.i
+
+main.s: main.cc.s
+.PHONY : main.s
+
+# target to generate assembly for a file
+main.cc.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/MathFunctions.dir/build.make CMakeFiles/MathFunctions.dir/main.cc.s
+.PHONY : main.cc.s
 
 # Help Target
 help:
@@ -161,10 +185,13 @@ help:
 	@echo "... depend"
 	@echo "... edit_cache"
 	@echo "... rebuild_cache"
-	@echo "... HelloWorld"
-	@echo "... hello_world.o"
-	@echo "... hello_world.i"
-	@echo "... hello_world.s"
+	@echo "... MathFunctions"
+	@echo "... MathFunctions.o"
+	@echo "... MathFunctions.i"
+	@echo "... MathFunctions.s"
+	@echo "... main.o"
+	@echo "... main.i"
+	@echo "... main.s"
 .PHONY : help
 
 
